Bug 447650 - Eraser part of the pen for Wacom Cintiq 16 does not work
Summary: Eraser part of the pen for Wacom Cintiq 16 does not work
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tools/Freehand (other bugs)
Version First Reported In: 5.0.0
Platform: Other Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: amyspark
URL:
Keywords:
: 449752 451117 451475 453266 (view as bug list)
Depends on:
Blocks:
 
Reported: 2021-12-29 17:15 UTC by LycanHeart
Modified: 2022-05-04 23:15 UTC (History)
11 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description LycanHeart 2021-12-29 17:15:47 UTC
SUMMARY
***
NOTE: If you are reporting a crash, please try to attach a backtrace with debug symbols.
See https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***


STEPS TO REPRODUCE
1. Tried to erase using the eraser feature of the Wacom Cintiq pen
2. 
3. 

OBSERVED RESULT
the eraser acts the same as the drawing tip part of the pen

EXPECTED RESULT


SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
older versions of Krita seem to be the only ones to support the pen eraser feature. Please fix it since many of us rely on this feature since it feel natural to artist that switched from traditional to digital.
Comment 1 Phil 2022-01-03 09:34:34 UTC
Same with good old Cintiq13HD on macOS 11.2
Comment 2 Know Zero 2022-01-24 08:07:46 UTC
I can confirm this bug on my old Wacom Graphics with both KDE OpenSuse and Linux Mint. 

Krita 4.4.8 appimage works, but 5.0.2 does not.
Comment 3 Alvin Wong 2022-01-27 09:39:00 UTC
Can reproduce with SP2017 on Windows 10 but only when using WinTab. Tablet log shows both pen tip and eraser tip as "Stylus".

Using WinInk, tablet log correctly shows "Eraser" for the eraser tip.
Comment 4 Ahab Greybeard 2022-02-08 11:27:20 UTC
With my old Wacom Graphire 2 tablet on Linux, Debian 10, using the 4.4.8 appimage or the 5.0.2 appimage, I have no problems using the 'eraser end' or the 'pen end' of the stylus then selecting different brush presets with each of them.
I can't test this on Windows because there is no Windows 10 driver for it and the modern Wacom Control Centre refuses to recognise it as a valid graphics tablet.

With my Wacom Intuos Draw tablet on Linux, I can't test it because I don't have the facilities to change the Linux driver configuration.

With my Wacom Intuous Draw tablet on Windows 10, 4.4.8 and 5.0.2 recognise and use the 'eraser' setting if I configure the second button to 'Erase' with the Wacom utility and also use Windows Ink.
This does not work with Wintab.
That Erase setting is not a toggle, the button has to be held down to use the 'eraser mode' preset.
Comment 5 Alvin Wong 2022-02-11 09:10:12 UTC
*** Bug 449752 has been marked as a duplicate of this bug. ***
Comment 6 Alvin Wong 2022-03-04 06:47:08 UTC
*** Bug 451117 has been marked as a duplicate of this bug. ***
Comment 7 amyspark 2022-03-17 13:03:12 UTC
*** Bug 451475 has been marked as a duplicate of this bug. ***
Comment 8 amyspark 2022-03-17 14:52:13 UTC
Git commit 2b89188f8291beb5de4c27bd6da99fffaf20e901 by L. E. Segovia.
Committed on 17/03/2022 at 14:51.
Pushed by lsegovia into branch 'krita/5.0'.

Fix name of default eraser preset

In commit 90afcc73f065610e32610325fd89ce03d4272f72, Halla removed the
eraser name lookup and fallback. However, the default name lacks the
"a)_" and thus doesn't match any default resource.
(cherry picked from commit dd368ef73f3bf8972a16fa0b0c4fd5f193ba6fa1)

M  +1    -1    libs/ui/kis_paintop_box.cc

https://invent.kde.org/graphics/krita/commit/2b89188f8291beb5de4c27bd6da99fffaf20e901
Comment 9 amyspark 2022-03-17 14:53:04 UTC
Git commit dd368ef73f3bf8972a16fa0b0c4fd5f193ba6fa1 by L. E. Segovia.
Committed on 17/03/2022 at 14:50.
Pushed by lsegovia into branch 'master'.

Fix name of default eraser preset

In commit 90afcc73f065610e32610325fd89ce03d4272f72, Halla removed the
eraser name lookup and fallback. However, the default name lacks the
"a)_" and thus doesn't match any default resource.

M  +1    -1    libs/ui/kis_paintop_box.cc

https://invent.kde.org/graphics/krita/commit/dd368ef73f3bf8972a16fa0b0c4fd5f193ba6fa1
Comment 10 amyspark 2022-03-17 18:17:50 UTC
Git commit ef7f683e3047ea5fac404096fde2f1eaec199f0d by L. E. Segovia.
Committed on 17/03/2022 at 18:17.
Pushed by lsegovia into branch 'master'.

Fix default preset names (master branch only)

Commit 88e48c58ed576b946dbc49ce0fa00e2dcb24afbd causes default
preset lookups to fail, since we replace all underscores in preset
names.

This commits completes dd368ef73f3bf8972a16fa0b0c4fd5f193ba6fa1
by applying the replacement to the hardcoded default names.
CCMAIL: halla@valdyas.org

M  +1    -1    libs/ui/KisViewManager.cpp
M  +2    -2    libs/ui/kis_paintop_box.cc

https://invent.kde.org/graphics/krita/commit/ef7f683e3047ea5fac404096fde2f1eaec199f0d
Comment 11 amyspark 2022-05-04 23:14:39 UTC
Git commit 90628dcd36f0db58910edf3b57aabb271cd4ed18 by L. E. Segovia.
Committed on 04/05/2022 at 23:10.
Pushed by lsegovia into branch 'krita/5.0'.

Fix default preset names (master branch only)

Commit 88e48c58ed576b946dbc49ce0fa00e2dcb24afbd causes default
preset lookups to fail, since we replace all underscores in preset
names.

This commits completes dd368ef73f3bf8972a16fa0b0c4fd5f193ba6fa1
by applying the replacement to the hardcoded default names.
Related: bug 453266
CCMAIL: halla@valdyas.org

M  +1    -1    libs/ui/KisViewManager.cpp
M  +2    -2    libs/ui/kis_paintop_box.cc

https://invent.kde.org/graphics/krita/commit/90628dcd36f0db58910edf3b57aabb271cd4ed18
Comment 12 amyspark 2022-05-04 23:15:02 UTC
*** Bug 453266 has been marked as a duplicate of this bug. ***