Fix name of default eraser preset

In commit 90afcc73f065610e32610325fd89ce03d4272f72, Halla removed the
eraser name lookup and fallback. However, the default name lacks the
"a)_" and thus doesn't match any default resource.

BUG: 447650
(cherry picked from commit dd368ef73f3bf8972a16fa0b0c4fd5f193ba6fa1)